# MSDS-CS643-F2024-PRG2-ML-WINE-PRED

./: README.md
Docker/: clientApp.py  compose.yml  dockerfile  mll.dockerfile  requirements.txt
wine_app/: pyproject.toml
wine_app/data/: TrainingDataset.csv
wine_app/utils/: getModelFromS3.py
wine_app/wine_app/: s3Utils.py  wineapp.py  winepred.py
