[tool.poetry]
name = "wine-app"
version = "0.1.0"
description = "Wine Prediction using MLL, PySpark."
authors = ["Jairo A Perez <jp594@njit.edu>"]
readme = "README.md"
packages = [{include ="wine-app"}]

[tool.poetry.dependencies]
python = "^3.13"
pyspark = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
